bk_ida/gccida/c3/instantiate_virtual_regs_1
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4263:6: error: use of undeclared identifier 'v16'
rtx *v16; // r12 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4266:6: error: use of undeclared identifier 'v19'
rtx *v19; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4295:6: error: use of undeclared identifier 'v48'
rtx *v48; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4298:6: error: use of undeclared identifier 'v51'
rtx *v51; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4308:6: error: use of undeclared identifier 'v61'
rtx *v61; // rsi 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4320:4: error: expected ';' after expression
rtx arg0; // [rsp+10h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4320:5: error: use of undeclared identifier 'arg0'
rtx arg0; // [rsp+10h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4324:4: error: expected ';' after expression
rtx value; // [rsp+20h] [rbp-48h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4324:5: error: use of undeclared identifier 'value'
rtx value; // [rsp+20h] [rbp-48h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4326:4: error: expected ';' after expression
rtx v81; // [rsp+30h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4326:5: error: use of undeclared identifier 'v81'
rtx v81; // [rsp+30h] [rbp-38h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4366:14: error: expected expression
v16 = ( rtx *)&v6[1]; 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4366:1: error: use of undeclared identifier 'v16'
v16 = ( rtx *)&v6[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4367:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v17 = (  struct rtx_def *)v6[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4437:1: error: use of undeclared identifier 'value'
value = ( rtx)v6[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4438:30: error: use of undeclared identifier 'value'
instantiate_virtual_regs_1( &value, 0LL, 0); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4439:17: error: use of undeclared identifier 'value'
if ( *( _WORD *)value != 61 && *( _WORD *)value != 75 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4439:43: error: use of undeclared identifier 'value'
if ( *( _WORD *)value != 61 && *( _WORD *)value != 75 ) 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/function.c:4441:14: error: expected expression
v51 = ( rtx *)&v6[1]; 
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/instantiate_virtual_regs_1/src/obj/function.o] Error 1
